--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-"presets": ["react-native"]
+  "presets": ["react-native"],
+  "plugins": [
+    [ "babel-plugin-module-alias", [
+      { "src": "./app", "expose": "app" }
+    ]]
+  ]
 }
