--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel": "^6.23.0",
+    "babel-plugin-module-alias": "^1.6.0",
     "lodash": "^4.17.4",
     "querystring": "^0.2.0",
     "react": "15.4.2",
