--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "json-beautify": "^1.0.1",
     "json-loader": "^0.5.4",
     "moment": "^2.17.1",
+    "parallax-js": "git+https://github.com/wagerfield/parallax.git#v3",
     "query-string": "^4.2.3",
     "radium": "^0.18.1",
     "react": "^15.3.2",
@@ -16,6 +17,7 @@
     "react-dom": "^15.3.2",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.6",
+    "react-svg-use": "^2.1.0",
     "redux-actions": "^0.12.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0",
