--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "---  - React  - Webpack  - Babel  - ES6  - Alt (flux implementation)",
   "main": "index.js",
   "dependencies": {
+    "bourbon": "^4.3.3",
     "file-loader": "^0.9.0",
     "history": "^4.3.0",
     "json-beautify": "^1.0.1",
@@ -51,9 +52,11 @@
     "eslint-plugin-standard": "^2.0.1",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "eyeglass": "^1.2.1",
     "file": "^0.2.2",
     "html-webpack-plugin": "^2.24.0",
     "http-proxy-middleware": "^0.17.2",
+    "node-bourbon": "^4.2.8",
     "node-sass": "^3.10.1",
     "react-redux": "^5.0.2",
     "react-transform-catch-errors": "^1.0.2",
